# icosPrep

./: .gitignore  README.md  icosPrep.epj  lumia-config-v6.3-tr-co2.yml  min-py-env-requirements-lumiaGUI.txt  py-env-LumiaGUI.txt  pyproject.toml  pyproject.toml.bac  setup.cfg
doc/: min-requirements-icosPrep.txt
docs/: build-icosPrep-env.txt  index.md  lumia-config-v6-tr-co2.yml  min-requirements-icosPrep.txt
examples/: LumiaDA-2024-04-26T01_02-config.yml  lumia-config-v6.3-tr-co2-JL.yml  lumia-config-v6.3-tr-co2.yml
examples/icosPrep-2024-07-29T11_24-JL/: icosPrep-2024-07-29T11_01-DiscoveredObservations-co2.csv  icosPrep-2024-07-29T11_24-config.yml  icosPrep-2024-07-29T11_24-python-environment-pipLst.txt  icosPrep-2024-07-29T11_24-selected-ObsData-co2.csv  icosPrep-2024-07-29T11_24-selected-PIDs-co2.csv
examples/icosPrep-2024-07-31T14_57/: icosPrep-2024-07-31T14_57-config.yml
icosPrep/: __init__.py.old  icosPrep.py
icosPrep/dataHunting/: dataHunter.py  dataHunterNotebook.ipynb  dataHunterNotebook.py  guiElementsTk.py  myCarbonPortalTools.py  queryCarbonPortal.py
icosPrep/dataPrep/: cdoWrapper.py  obsCPortalDb.py  obsdb.py  prepData.py  readLv3NcFileFromCarbonPortal.py  readObservationsFromCarbonPortal.py  xrReader.py
icosPrep/utils/: boringStuff.py  gridutils.py  housekeeping.py  ymlSmartLoader.py
src/: __init__.py  icosPrep.py
src/dataHunting/: dataHunter.py  dataHunterNotebook.py  guiElementsTk.py
src/dataPrep/: prepData.py
