[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'


[project]
name = "icosPrep"
version = '0.1.0'
authors = [
    {'name' = "Arndt Meier", email="arndt.meier@nateko.lu.se"},
    {'name' = "Arndt Meier", email="koala.oso@gmail.com"}
]
readme = "README.md"
dependencies = ['Cartopy>=0.21.1, <=0.21.99', 'colorlog>=6.8.2, <=6.8.99', 'customtkinter>=5.2.2, <=5.2.99', 'h5py>=3.9.0, <=3.9.99', 'icoscp>=0.2.0, <=0.2.99', 'icoscp_core>=0.3.4, <=0.3.99', 'ipython>=8.12.3, <=8.12.99', 'ipywidgets>=8.1.1, <=8.1.99', 'jupyter_ui_poll>=1.0.0, <=1.0.99', 'loguru>=0.7.2, <=0.7.99', 'matplotlib>=3.7.2, <=3.7.99', 'netCDF4>=1.7.1.post1', 'numpy>=1.24.2, <=1.25.99', 'omegaconf>=2.3.0, <=2.3.99', 'pandas>=2.0.1, <=2.0.99', 'Pillow>=10.4.0, <=10.4.99', 'Pint==0.22', 'python_dateutil>=2.9.0, <=2.9.99', 'PyYAML>=6.0.1, <=6.0.99', 'ray>=2.31.0, <=2.31.99', 'scipy>=1.14.0, <=1.14.99', 'screeninfo>=0.8.1, <=0.8.99', 'setuptools>=69.5.1, <=69.5.99', 'Shapely>=2.0.4, <=2.0.99', 'tqdm>=4.66.1, <=4.66.99', 'xarray>=2023.8.0, <=2023.12.99']
requires-python = '>=3.10, <=3.11.99'
classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
        "Operating System :: OS Independent",
]


[tool.setuptools.packages.find]
where = ['icosPrep']
include = ['dataHunting*', 'dataPrep*', 'utils*']


[project.optional-dependencies]
interactive = ['ipython', 'ipywidgets', 'jupyter_bokeh', 'ipykernel']
icos = ['icoscp']


